# Sarathi

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  FUTURE.md  README.md  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: canary.yml  ci.yml
benchmarks/: cost_report.py  tau_sweep.py
benchmarks/cache/: cache_eval_dataset.jsonl  generate_cache_eval_dataset.py
benchmarks/chaos/: run_chaos_test.py
benchmarks/locust/: gateway.py  run_load_test.py
benchmarks/replay/: generate_routing_dataset.py  routing_dataset.jsonl  routing_eval.py
canary/: judge.py  run_canary.py
canary/probe_set/: probes.jsonl
docs/: BLUEPRINT.md  HUMAN_TASKS.md  PLAN.md  supabase_schema.sql
docs/notes/: build.md
gateway/: config.py  schemas.py
gateway/api/: errors.py  main.py  routes_admin.py  routes_chat.py  routes_dashboard.py  routes_models.py  sse.py
gateway/auth/: dependency.py  ratelimit.py
gateway/cache/: embeddings.py  exact.py  manager.py
gateway/metering/: pricing.py  writer.py
gateway/providers/: base.py  breaker.py  errors.py  failover.py  gemini.py  groq.py  mock.py  registry.py
gateway/router/: classifier.py  features.py  policy.py
gateway/storage/: base.py  factory.py  models.py  sqlite_store.py  supabase_store.py
policies/: failover.yaml  routing.yaml
results/cache/: tau_sweep.json
results/canary/: latest.json
results/load/: load_test.json
tests/: conftest.py  helpers.py  test_admin.py  test_breaker.py  test_cache.py  test_canary.py  test_chat_basic.py  test_failover.py  test_provider_adapters.py  test_router.py
(+5 files in other folders)
